--- a/KaloriWebApplication/Views/Account/DailyWeeklyReports.cshtml
+++ b/KaloriWebApplication/Views/Account/DailyWeeklyReports.cshtml
@@ -1,5 +1,4 @@
-﻿namespace KaloriWebApplication.Views.Account
-@{
+﻿@{
     ViewData["Title"] = "Günlük ve Haftalık Raporlar";
 }
 
@@ -73,18 +72,31 @@
             var dailyDateString = today.toLocaleDateString('tr-TR', { year: 'numeric', month: 'long', day: 'numeric' });
             $('#dailyDate').text(dailyDateString);
 
-            var weekStart = new Date(today.setDate(today.getDate() - today.getDay()));
-            var weekEnd = new Date(today.setDate(today.getDate() - today.getDay() + 6));
+            var weekStart = new Date(today);
+            weekStart.setDate(today.getDate() - today.getDay());
+            var weekEnd = new Date(today);
+            weekEnd.setDate(today.getDate() - today.getDay() + 6);
             var weekStartString = weekStart.toLocaleDateString('tr-TR', { year: 'numeric', month: 'short', day: 'numeric' });
             var weekEndString = weekEnd.toLocaleDateString('tr-TR', { year: 'numeric', month: 'short', day: 'numeric' });
             $('#weekStartDate').text(weekStartString);
             $('#weekEndDate').text(weekEndString);
 
-            // Daily Report
+            var formatDate = function (date) {
+                var d = new Date(date),
+                    month = '' + (d.getMonth() + 1),
+                    day = '' + d.getDate(),
+                    year = d.getFullYear();
+
+                if (month.length < 2) month = '0' + month;
+                if (day.length < 2) day = '0' + day;
+
+                return [year, month, day].join('-');
+            };
+
             $.ajax({
-                url: '@Url.Action("GetUserNutrientsByDate", "Nutrient")',
+                url: '@Url.Action("GetUserNutrientsByDate", "Report")',
                 type: 'GET',
-                data: { date: today },
+                data: { date: formatDate(today) },
                 success: function (response) {
                     if (response.success) {
                         var dailyNutrientsList = $('#dailyNutrientsList');
@@ -110,11 +122,10 @@
                 }
             });
 
-            // Weekly Report
             $.ajax({
-                url: '@Url.Action("GetUserNutrientsByWeek", "Nutrient")',
+                url: '@Url.Action("GetUserNutrientsByWeek", "Report")',
                 type: 'GET',
-                data: { startDate: weekStart, endDate: weekEnd },
+                data: { startDate: formatDate(weekStart), endDate: formatDate(weekEnd) },
                 success: function (response) {
                     if (response.success) {
                         var weeklyNutrientsList = $('#weeklyNutrientsList');
@@ -142,3 +153,4 @@
         });
     </script>
 }
+
