--- a/KaloriWebApplication/Views/Account/DailyWeeklyReports.cshtml
+++ b/KaloriWebApplication/Views/Account/DailyWeeklyReports.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Günlük ve Haftalık Raporlar";
+    Layout = "_dashlayout";
 }
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.css" />
