--- a/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
@@ -50,7 +50,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Günlük Haftalık Raporlar
                         </a>
-                        <a class="nav-link" asp-controller="Account" asp-action="ProfileUpdating">
+                        <a class="nav-link" asp-controller="Report" asp-action="notification">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Bildirimler
                         </a>
