--- a/KaloriWebApplication/Views/Account/Login.cshtml
+++ b/KaloriWebApplication/Views/Account/Login.cshtml
@@ -4,6 +4,45 @@
     ViewData["Title"] = "Login";
 }
 <style>
+    .card-header {
+        background-color: cadetblue !important;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Gölge ekler */
+    }
+
+    .text-success {
+        color: cadetblue !important; /* Cadetblue rengi */
+    }
+
+    .btn-success {
+        background-color: cadetblue; /* Cadetblue rengi */
+        border-color: cadetblue; /* Cadetblue rengi */
+    }
+
+    .text-success a {
+        color: cadetblue !important; /* Cadetblue rengi */
+    }
+
+    .card {
+        border-radius: 20px; /* Tüm kartın kenarlarını yuvarla */
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Daha belirgin gölge ekler */
+        overflow: hidden; /* Kenar yuvarlamasının düzgün görünmesi için */
+    }
+
+    .card-body {
+        padding: 2rem;
+    }
+
+    .card-footer {
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: #f8f9fa; /* Açık gri arka plan */
+    }
+
+
+
+
 
 </style>
 
