--- a/KaloriWebApplication/Views/Account/Register.cshtml
+++ b/KaloriWebApplication/Views/Account/Register.cshtml
@@ -4,6 +4,30 @@
     ViewData["Title"] = "Register";
 }
 
+<style>
+    .card-header {
+        background-color: cadetblue !important;
+        border-top-left-radius: 20px;
+        border-top-right-radius: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Gölge ekler */
+    }
+
+    .text-success {
+        color: cadetblue !important; /* Cadetblue rengi */
+    }
+
+    .btn-success {
+        background-color: cadetblue; /* Cadetblue rengi */
+        border-color: cadetblue; /* Cadetblue rengi */
+    }
+
+    .text-success a {
+        color: cadetblue !important; /* Cadetblue rengi */
+    }
+
+    
+</style>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
