--- a/KaloriWebApplication/Views/Account/Login.cshtml
+++ b/KaloriWebApplication/Views/Account/Login.cshtml
@@ -8,26 +8,28 @@
         background-color: cadetblue !important;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Gölge ekler */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     }
 
     .text-success {
-        color: cadetblue !important; /* Cadetblue rengi */
+        color: cadetblue !important; 
     }
 
     .btn-success {
-        background-color: cadetblue; /* Cadetblue rengi */
-        border-color: cadetblue; /* Cadetblue rengi */
+        background-color: cadetblue; 
+        border-color: cadetblue; 
     }
 
     .text-success a {
-        color: cadetblue !important; /* Cadetblue rengi */
+        color: cadetblue !important;
+        border-color: cadetblue;
+        margin-top: 2rem; 
     }
 
     .card {
-        border-radius: 20px; /* Tüm kartın kenarlarını yuvarla */
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Daha belirgin gölge ekler */
-        overflow: hidden; /* Kenar yuvarlamasının düzgün görünmesi için */
+        border-radius: 20px; 
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); 
+        overflow: hidden; 
     }
 
     .card-body {
@@ -37,7 +39,7 @@
     .card-footer {
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
-        background-color: #f8f9fa; /* Açık gri arka plan */
+
     }
 
 
