--- a/KaloriWebApplication/Views/Account/Register.cshtml
+++ b/KaloriWebApplication/Views/Account/Register.cshtml
@@ -9,20 +9,20 @@
         background-color: cadetblue !important;
         border-top-left-radius: 20px;
         border-top-right-radius: 20px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Gölge ekler */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     }
 
     .text-success {
-        color: cadetblue !important; /* Cadetblue rengi */
+        color: cadetblue !important; 
     }
 
     .btn-success {
-        background-color: cadetblue; /* Cadetblue rengi */
-        border-color: cadetblue; /* Cadetblue rengi */
+        background-color: cadetblue; 
+        border-color: cadetblue; 
     }
 
     .text-success a {
-        color: cadetblue !important; /* Cadetblue rengi */
+        color: cadetblue !important; 
     }
 
     
