--- a/KaloriWebApplication/Views/Shared/_Layout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_Layout.cshtml
@@ -66,8 +66,8 @@
         }
 
             #Login a:hover, #Register a:hover, #Logout button:hover {
-                background-color: cadetblue; /* Hover durumunda da aynı arka plan rengi */
-                color: white; /* Beyaz metin */
+                background-color: cadetblue; 
+                color: white; 
             }
     </style>
 </head>
