--- a/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_dashlayout.cshtml
@@ -28,7 +28,11 @@
                     <li><a class="dropdown-item" href="#!">Settings</a></li>
                     <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    <li>
+                        <form method="post" asp-controller="Account" asp-action="Logout" class="d-inline">
+                            <button type="submit" class="dropdown-item">Logout</button>
+                        </form>
+                    </li>
                 </ul>
             </li>
         </ul>
